<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".MainActivity">
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
			<Spinner
					android:id="@+id/memory_switch"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					tools:ignore="InefficientWeight,RtlHardcoded,Suspicious0dp"
					android:entries="@array/MEMORY_list"
					android:scrollbarSize="@dimen/itemTextSize"
					android:layout_marginBottom="5dp"
					android:layout_marginRight="@dimen/marginSize">
			</Spinner>
			<Spinner
					android:id="@+id/spinner_switch"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					tools:ignore="InefficientWeight,Suspicious0dp"
					android:entries="@array/spinner_list"
					android:scrollbarSize="@dimen/itemTextSize"
					android:layout_marginBottom="5dp">
			</Spinner>
			<TextView
					android:id="@+id/system_run_time_all"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="@color/black"
					android:textSize="@dimen/titleTextSize"
					android:text="系统运行时间：0S"
					tools:ignore="HardcodedText,SpUsage">
			</TextView>
			<Button
					android:id="@+id/show_memory_dialog"
					android:layout_width="wrap_content"
					android:layout_height="24dp"
					android:background="@drawable/shape_corner"
					android:textSize="@dimen/itemTextSize"
					android:text="查看内存使用详情"
					android:textColor="@color/white"
					tools:ignore="HardcodedText,RtlHardcoded,SpUsage"
					android:layout_marginLeft="@dimen/marginSize">
			</Button>
		</LinearLayout>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:paddingTop="5dp"
				android:paddingBottom="5dp">
			<TextView
					android:layout_width="0dp"
					android:layout_weight="2"
					android:layout_height="wrap_content"
					android:textColor="@color/black"
					android:text="进程名"
					tools:ignore="HardcodedText,SpUsage"
					android:textSize="@dimen/itemTextSize"
					android:gravity="center">
			</TextView>
			<TextView
					android:layout_width="0dp"
					android:layout_weight="2"
					android:layout_height="wrap_content"
					android:textColor="@color/black"
					android:text="PID"
					tools:ignore="HardcodedText,SpUsage"
					android:textSize="@dimen/itemTextSize"
					android:gravity="center">
			</TextView>
			<TextView
					android:layout_width="0dp"
					android:layout_weight="2"
					android:layout_height="wrap_content"
					android:textColor="@color/black"
					android:text="优先级"
					tools:ignore="HardcodedText,SpUsage"
					android:textSize="@dimen/itemTextSize"
					android:gravity="center">
			</TextView>
			<TextView
					android:id="@+id/item_arrivals_time"
					android:layout_width="0dp"
					android:layout_weight="2"
					android:layout_height="wrap_content"
					android:textColor="@color/black"
					android:text="到达时间"
					tools:ignore="HardcodedText,SpUsage"
					android:textSize="@dimen/itemTextSize"
					android:gravity="center">
			</TextView>
			<TextView
					android:layout_width="0dp"
					android:layout_weight="2"
					android:layout_height="wrap_content"
					android:textColor="@color/black"
					android:text="需要时间"
					tools:ignore="HardcodedText,SpUsage"
					android:textSize="@dimen/itemTextSize"
					android:gravity="center">
			</TextView>
			<TextView
					android:layout_width="0dp"
					android:layout_weight="3"
					android:layout_height="wrap_content"
					android:textColor="@color/black"
					android:text="已用CPU时"
					tools:ignore="HardcodedText,SpUsage"
					android:textSize="@dimen/itemTextSize"
					android:gravity="center">
			</TextView>
			<TextView
					android:layout_width="0dp"
					android:layout_weight="2"
					android:layout_height="wrap_content"
					android:textColor="@color/black"
					android:text="阻塞原因"
					tools:ignore="HardcodedText,SpUsage"
					android:textSize="@dimen/itemTextSize"
					android:gravity="center">
			</TextView>
			<TextView
					android:layout_width="0dp"
					android:layout_weight="2"
					android:layout_height="wrap_content"
					android:textColor="@color/black"
					android:text="内存首址"
					tools:ignore="HardcodedText,SpUsage"
					android:textSize="@dimen/itemTextSize"
					android:gravity="center">
			</TextView>
			<TextView
					android:layout_width="0dp"
					android:layout_weight="2"
					android:layout_height="wrap_content"
					android:textColor="@color/black"
					android:text="内存大小"
					tools:ignore="HardcodedText,SpUsage"
					android:textSize="@dimen/itemTextSize"
					android:gravity="center">
			</TextView>
			<TextView
					android:layout_width="0dp"
					android:layout_weight="2"
					android:layout_height="wrap_content"
					android:textColor="@color/black"
					android:text="队列等级"
					tools:ignore="HardcodedText,SpUsage"
					android:textSize="@dimen/itemTextSize"
					android:gravity="center">
			</TextView>
			<TextView
					android:layout_width="0dp"
					android:layout_weight="2"
					android:layout_height="26dp"
					android:layout_marginRight="2dp"
					android:textColor="@color/black"
					android:text="挂起"
					tools:ignore="HardcodedText,RtlHardcoded,SpUsage"
					android:textSize="@dimen/itemTextSize"
					android:gravity="center">
			</TextView>
			<TextView
					android:layout_width="0dp"
					android:layout_weight="2"
					android:layout_height="26dp"
					android:layout_marginRight="2dp"
					android:textColor="@color/black"
					android:text="操作"
					tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry,SpUsage"
					android:textSize="@dimen/itemTextSize"
					android:gravity="center">
			</TextView>
		</LinearLayout>
		<TextView
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="@color/gray">
		</TextView>
		<ScrollView
				android:layout_width="match_parent"
				android:layout_height="match_parent">
			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="vertical"
					tools:ignore="ScrollViewSize,UselessLeaf">
				<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:textSize="@dimen/titleTextSize"
						android:textColor="@color/black"
						android:text="@string/run_queue"
						tools:ignore="SpUsage">
				</TextView>
				<TextView
						android:layout_width="match_parent"
						android:layout_height="1dp"
						android:background="@color/gray">
				</TextView>
				<cn.ajiehome.dispatch.ui.view.ListViewForScrollView
						android:id="@+id/run_queue"
						android:layout_width="match_parent"
						android:layout_height="match_parent">
				</cn.ajiehome.dispatch.ui.view.ListViewForScrollView>
				<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:textSize="@dimen/titleTextSize"
						android:textColor="@color/black"
						android:text="@string/create_queue"
						tools:ignore="SpUsage">
				</TextView>
				<TextView
						android:layout_width="match_parent"
						android:layout_height="1dp"
						android:background="@color/gray">
				</TextView>
				<cn.ajiehome.dispatch.ui.view.ListViewForScrollView
						android:id="@+id/create_queue"
						android:layout_width="match_parent"
						android:layout_height="match_parent">
				</cn.ajiehome.dispatch.ui.view.ListViewForScrollView>
				<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:textSize="@dimen/titleTextSize"
						android:textColor="@color/black"
						android:text="@string/ready_queue"
						tools:ignore="SpUsage">
				</TextView>
				<TextView
						android:layout_width="match_parent"
						android:layout_height="1dp"
						android:background="@color/gray">
				</TextView>
				<cn.ajiehome.dispatch.ui.view.ListViewForScrollView
						android:id="@+id/ready_queue"
						android:layout_width="match_parent"
						android:layout_height="match_parent">
				</cn.ajiehome.dispatch.ui.view.ListViewForScrollView>
				<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:textSize="@dimen/titleTextSize"
						android:textColor="@color/black"
						android:text="@string/block_queue"
						tools:ignore="SpUsage">
				</TextView>
				<TextView
						android:layout_width="match_parent"
						android:layout_height="1dp"
						android:background="@color/gray">
				</TextView>
				<cn.ajiehome.dispatch.ui.view.ListViewForScrollView
						android:id="@+id/block_queue"
						android:layout_width="match_parent"
						android:layout_height="match_parent">
				</cn.ajiehome.dispatch.ui.view.ListViewForScrollView>
				<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:textSize="@dimen/titleTextSize"
						android:textColor="@color/black"
						android:text="@string/hang_queue"
						tools:ignore="SpUsage">
				</TextView>
				<TextView
						android:layout_width="match_parent"
						android:layout_height="1dp"
						android:background="@color/gray">
				</TextView>
				<cn.ajiehome.dispatch.ui.view.ListViewForScrollView
						android:id="@+id/hang_queue"
						android:layout_width="match_parent"
						android:layout_height="match_parent">
				</cn.ajiehome.dispatch.ui.view.ListViewForScrollView>
				<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:textSize="@dimen/titleTextSize"
						android:textColor="@color/black"
						android:text="@string/finish_queue"
						tools:ignore="SpUsage">
				</TextView>
				<TextView
						android:layout_width="match_parent"
						android:layout_height="1dp"
						android:background="@color/gray">
				</TextView>
				<cn.ajiehome.dispatch.ui.view.ListViewForScrollView
						android:id="@+id/finish_queue"
						android:layout_width="match_parent"
						android:layout_height="match_parent">
				</cn.ajiehome.dispatch.ui.view.ListViewForScrollView>
			</LinearLayout>
		</ScrollView>
	</LinearLayout>

	<Button
			android:id="@+id/add_process_button"
			android:layout_width="match_parent"
			android:layout_height="34dp"
			android:background="@drawable/shape_corner"
			android:text="@string/add_process"
			android:textColor="@color/white"
			android:textSize="@dimen/titleTextSize"
			android:layout_alignParentBottom="true"
			tools:ignore="SpUsage"
			android:layout_margin="10dp"
			android:padding="5dp">
	</Button>

</RelativeLayout>